# tpecal

./: CMakeLists.txt  README.md
cmake/: FindROOT.cmake  SetUpMacOS.cmake.svn
root_macros/: ConvertData.C  ConvertData2.C  ConvertDirectory.C  FindNoisyN.C  InfoChip.C  MeanRMS_FEV10.C  Merge4Scurves.C  MergeByN.C  RAW2ROOT.C  RAW2ROOT_C.d  RunBatch_runs.C  RunFindNoisyN.C  RunMerge4Scurves.C  RunMergeByN.C
scripts/: script_file_example.sh  script_scan_example.sh
tpecalana/: CMakeLists.txt
tpecalana/include/: ADCManager.h  ASU.h  AnaManager.h  AnalysisManager.h  Channel.h  Chip.h  ChipBuffer.h  Dif.h  EventManager.h  ExperimentalSetup.h  FitGraphs.h  FitHistograms.h  Mapping.h  MonitorManager.h  RunManager.h  ScanManager.h  global.h
tpecalana/src/: ADCManager.cpp  ASU.cpp  AnaManager.cpp  AnalysisManager.cpp  Channel.cpp  Chip.cpp  ChipBuffer.cpp  Dif.cpp  EventManager.cpp  ExperimentalSetup.cpp  FitGraphs.cpp  FitHistograms.cpp  Mapping.cpp  MonitorManager.cpp  RunManager.cpp  ScanManager.cpp  global.cpp  main.cpp
